Fix scroll box overflow issue

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
     display: flex;
     flex-direction: column-reverse;
     box-shadow: 0 0 10px 2px;
+    overflow: auto;
 }
 
 .userDisplay {
